<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userpic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/dog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/myOutlineBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/helper_input_phone"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/normal_text"
                android:imeOptions="actionDone"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/myOutlineBox.phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/helper_input_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:digits="1234567890+-()"
                android:textAppearance="@style/normal_text"
                android:imeOptions="actionDone"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/normal_text"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/rbGrGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_m"
                    android:checked="true"
                    android:textAppearance="@style/normal_text"
                    />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_w"
                    android:checked="false"
                    android:textAppearance="@style/normal_text"
                    />
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textAppearance="@style/normal_text"
            android:text="@string/receive_notifications" />


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chbxNotifyAuthorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="true"
            android:textAppearance="@style/normal_text"
            android:text="@string/authorization_on_the_device" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chbxNotifyNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:checked="true"
            android:textAppearance="@style/normal_text"
            android:text="@string/new_products_and_offers" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAppearance="@style/normal_text"
                app:layout_constraintBottom_toTopOf="@id/progrBar"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/txtProgrBarPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_score"
                app:layout_constraintBottom_toTopOf="@id/progrBar"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAppearance="@style/grey_text"
                />


            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progrBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:progress="50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            style="@style/myButtonStyle"
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/save"
            android:textAppearance="@style/btn_text" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>